--- a/MAY2015/yamamoto.tex
+++ b/MAY2015/yamamoto.tex
@@ -1,258 +1,258 @@
 %\documentclass[9pt]{jsarticle}
 
 %プリアンプル
-%\title{積分のあゆみ -区分求積法からRiemann, Lebesgueへ-}
+%\title{積分のあゆみ -区分求積法からRiemann，Lebesgueへ-}
 %\author{山本}
 
 %パッケージ
 
 
-高校数学の花形でもある「微分積分」は, 解析学という大きな一分野の基本的な操作となっています. しかしながら, これらが現在の解析学においてどのように利用されているか, それに至るまでには数百年に渡る紆余曲折がありました. そこで今回は, 特に「積分」という操作について, 歴史の中でどのような道を辿ってきたのか, それを大雑把に概観してみたいと思います. 
+高校数学の花形でもある「微分積分」は，解析学という大きな一分野の基本的な操作となっています．しかしながら，これらが現在の解析学においてどのように利用されているか，それに至るまでには数百年に渡る紆余曲折がありました．そこで今回は，特に「積分」という操作について，歴史の中でどのような道を辿ってきたのか，それを大雑把に概観してみたいと思います．
 \Section{\S 1.積分のはじまりから微分との関係性まで}
 \Subsection{区分求積法}
-そもそも積分というものは, もともと図形の面積を求める目的で生まれた操作です. 面積を求めたい図形を, 既に面積をよく知っている図形(長方形, 三角形など)で近似していき, その近似した図形の面積の和を考えることで, 元の図形の面積の近似値を考えます. 図形による近似の精度が上がるほど, 面積の近似値も元の面積の値に限りなく「近づいていく」ことが期待できます. このとき「近づいていく」値を図形の面積と定める. つまり, 知っている図形によって面積を近似し, 極限まで近似することにより面積を得る操作として, 積分という概念は誕生しました.
-\par さて, 面積を求めたい図形として, 「閉区間$[a,b]$上で定義された連続関数$y=f(x)$のグラフ, $x$軸, そして2直線$x=a,b$で囲まれる部分」というものを考えてみましょう. $a,b$の値は何でも同じような議論になるので, $a=0,b=1$としておきます. 面積の近似法としては色々なものが考えられるでしょう. その1つとして, 次に紹介する「区分求積法」というものがあります. 高校数学でも最後の方に出てくるものですね. 
+そもそも積分というものは，もともと図形の面積を求める目的で生まれた操作です．面積を求めたい図形を，既に面積をよく知っている図形(長方形，三角形など)で近似していき，その近似した図形の面積の和を考えることで，元の図形の面積の近似値を考えます．図形による近似の精度が上がるほど，面積の近似値も元の面積の値に限りなく「近づいていく」ことが期待できます．このとき「近づいていく」値を図形の面積と定める．つまり，知っている図形によって面積を近似し，極限まで近似することにより面積を得る操作として，積分という概念は誕生しました．
+\par さて，面積を求めたい図形として，「閉区間$[a,b]$上で定義された連続関数$y=f(x)$のグラフ，$x$軸，そして2直線$x=a,b$で囲まれる部分」というものを考えてみましょう．$a,b$の値は何でも同じような議論になるので，$a=0,b=1$としておきます．面積の近似法としては色々なものが考えられるでしょう．その1つとして，次に紹介する「区分求積法」というものがあります．高校数学でも最後の方に出てくるものですね．
 \begin{itembox}[l]{定理(区分求積法)}
-閉区間$[0,1]$上で定義された実数値連続関数$y=f(x)$のグラフ, $x$軸, 2直線$x=0,1$で囲まれる部分の符号付き面積$S$は, $S=\displaystyle \lim_{n \to \infty}\frac{1}{n}\sum_{k=1}^n f\left(\frac{k}{n}\right)$で表される. 
+閉区間$[0,1]$上で定義された実数値連続関数$y=f(x)$のグラフ，$x$軸，2直線$x=0,1$で囲まれる部分の符号付き面積$S$は，$S=\displaystyle \lim_{n \to \infty}\frac{1}{n}\sum_{k=1}^n f\left(\frac{k}{n}\right)$で表される．
 \end{itembox}
-\par ここで, 「符号付き面積」というものは, $x$軸より上の部分は正のまま, $x$軸より下の部分は負の面積を持つとしたものです. 
-\par さて, この区分求積法がどのようなことを言っているのか説明します. まず, 閉区間$[0,1]$を$n$等分します. 次に, 各$k=1,2,\ldots ,n$に対し, $f(x)$の区間$\left[ \frac{k-1}{n},\frac{k}{n}\right]$における振る舞いを, グラフの右の端点$f\left(\frac{k}{n}\right)$により近似します. そうすると$n$個の長方形により図形が近似されます. 左から$k$番目の長方形の面積は$\frac{1}{n}f\left(\frac{k}{n}\right)$です. これら$n$個の長方形の面積の総和を取ったのち, $n$を$\infty$に持っていく極限を行ったものが上の区分求積法です. 
-\par 高校数学では「積分は微分の逆演算」として積分が定義されますが, 実際の歴史ではむしろ, 高校数学の最後の方に出てくる, この「区分求積法」の方が積分の定義に近いことをしていたというわけです. 
+\par ここで，「符号付き面積」というものは，$x$軸より上の部分は正のまま，$x$軸より下の部分は負の面積を持つとしたものです．
+\par さて，この区分求積法がどのようなことを言っているのか説明します．まず，閉区間$[0,1]$を$n$等分します．次に，各$k=1,2,\ldots ,n$に対し，$f(x)$の区間$\left[ \frac{k-1}{n},\frac{k}{n}\right]$における振る舞いを，グラフの右の端点$f\left(\frac{k}{n}\right)$により近似します．そうすると$n$個の長方形により図形が近似されます．左から$k$番目の長方形の面積は$\frac{1}{n}f\left(\frac{k}{n}\right)$です．これら$n$個の長方形の面積の総和を取ったのち，$n$を$\infty$に持っていく極限操作を行ったものが上の区分求積法です．
+\par 高校数学では「積分は微分の逆演算」として積分が定義されますが，実際の歴史ではむしろ，高校数学の最後の方に出てくる，この「区分求積法」の方が積分の定義に近いことをしていたというわけです．
 \Subsection{微分積分学の基本定理}
-積分は「図形の面積を求める」ための操作として定義されたということをみました. この定義において, 微分というものは一切出てきません. しかし高校数学で「積分は微分の逆演算」として定義されるように, 微分と積分は密接な関係を持っています. では, 積分が微分と結びついたのはいつごろでしょうか？ それはNewtonやLeibnizが微分法を作り上げた17世紀ごろにさかのぼります. 彼らはそれぞれ独自に, 積分と微分の次のような関係性を見出しました. 
+積分は「図形の面積を求める」ための操作として定義されたということをみました．この定義において，微分というものは一切出てきません．しかし高校数学で「積分は微分の逆演算」として定義されるように，微分と積分は密接な関係を持っています．では，積分が微分と結びついたのはいつごろでしょうか？ それはNewtonやLeibnizが微分法を作り上げた17世紀ごろにさかのぼります．彼らはそれぞれ独自に，積分と微分の次のような関係性を見出しました． 
 \begin{itembox}[l]{定理(微分積分学の基本定理)}
-$a,b$を, $a<b$となる実定数, また$x_0$を$t\in (a,b)$を満たす実変数とする. 閉区間$[a,b]$上で定義された実数値連続関数$y=f(x)$のグラフ, $x$軸, 2直線$x=a,t$により囲まれる部分の符号付き面積を$S(t)$とおくと, $S(t)$は$t$で微分可能で, 
+$a,b$を，$a<b$となる実定数，また$x_0$を$t\in (a,b)$を満たす実変数とする．閉区間$[a,b]$上で定義された実数値連続関数$y=f(x)$のグラフ，$x$軸，2直線$x=a,t$により囲まれる部分の符号付き面積を$S(t)$とおくと，$S(t)$は$t$で微分可能で，
 \begin{eqnarray}
 \frac{dS}{dt}(t)=f(t) \nonumber
 \end{eqnarray}
-が成り立つ. 
+が成り立つ．
 \end{itembox}
-\par Leibniz, Newtonらによるこの結果は, それまでまったく関係ないと思われていた微分学・積分学を統合するとても強力な定理であり, 今日では「微分積分学の基本定理」と呼ばれています. 高校数学ではかなり簡単に説明されていますが, 歴史的にはこの結論にたどり着くまでにかなり長い時間がかかっていたわけです. この定理が見つかるまで, 積分学は近似の仕方等かなり技巧的な議論を要していたのですが, この定理により原始関数を求められさえすれば面積を求められることが分かり, 議論が大幅に簡潔になりました. 
-\par さて, 彼らはこの定理を次のように証明しました. 
-\par $t\in(a,b)$とします. また, $t<t+h<b$となる$h$を考えます. ここで, $S(t+h)-S(t)$の値を不等式評価してみましょう. $S(t+h)-S(t)$の値は, $y=f(x)$, $x$軸, 2直線$x=t,t+h$により囲まれる部分の符号付き面積と考えられます. ですから, $[t,t+h]$における$f$の“最大値”を$M(h)$, “最小値”を$m(h)$とおくと, 
+\par Leibniz, Newtonらによるこの結果は，それまでまったく関係ないと思われていた微分学・積分学を統合するとても強力な定理であり，今日では「微分積分学の基本定理」と呼ばれています．高校数学ではかなり簡単に説明されていますが，歴史的にはこの結論にたどり着くまでにかなり長い時間がかかっていたわけです．この定理が見つかるまで，積分学は近似の仕方等かなり技巧的な議論を要していたのですが，この定理により原始関数を求められさえすれば面積を求められることが分かり，議論が大幅に簡潔になりました．
+\par さて，彼らはこの定理を次のように証明しました．
+\par $t\in(a,b)$とします．また，$t<t+h<b$となる$h$を考えます．ここで，$S(t+h)-S(t)$の値を不等式評価してみましょう．$S(t+h)-S(t)$の値は，$y=f(x)$のグラフ，$x$軸，2直線$x=t,t+h$により囲まれる部分の符号付き面積と考えられます．ですから，$[t,t+h]$における$f$の“最大値”を$M(h)$，“最小値”を$m(h)$とおくと，
 \begin{eqnarray}
 m(h) \cdot h \le & S(t+h)-S(t) & \le M(h) \cdot h \nonumber \\
 m(h) \le & \frac{S(t+h)-S(t)}{h} & \le M(h) \nonumber
 \end{eqnarray}
-が成り立ちます. さて, 最大値$M(h)$, 最小値$m(h)$について, $h$が0に「限りなく近づく」につれ, ともに$f(t)$に「限りなく近づく」はずです. つまり, 
+が成り立ちます．さて，最大値$M(h)$，最小値$m(h)$について，$h$が0に「限りなく近づく」につれ，ともに$f(t)$に「限りなく近づく」はずです．つまり，
 \begin{eqnarray}
 \lim_{h \to +0}M(h)=\lim_{h \to +0}m(h)=f(t) \nonumber
 \end{eqnarray}
-が成り立つはずです. したがって, 上の不等式と合わせれば, はさみうちの原理により, 
+が成り立つはずです．したがって，上の不等式と合わせれば，はさみうちの原理により，
 \begin{eqnarray}
 \lim_{h \to +0}\frac{S(t+h)-S(t)}{h} =f(t) \nonumber
 \end{eqnarray}
-が分かります. これと同様に, $a<t+h<t$となる$h$を考えれば
+が分かります．これと同様に，$a<t+h<t$となる$h$を考えれば
 \begin{eqnarray}
 \lim_{h \to -0}\frac{S(t+h)-S(t)}{h} =f(t) \nonumber
 \end{eqnarray}
-が分かりますから, これらを合わせて
+が分かりますから，これらを合わせて
 \begin{eqnarray}
 \frac{dS}{dt}(t)=\lim_{h \to 0}\frac{S(t+h)-S(t)}{h} =f(t) \nonumber
 \end{eqnarray}
-が成り立ちます. これで定理が証明されました. 
-\par これでめでたしめでたし, と言いたいところですが, よく見るとこの証明には曖昧な部分がいくつかあることが分かります. 特に「近づいていく」とはどういうことか, その概念が非常にフワフワしています. これは「関数の連続性」という概念に関わってきます. 彼らはこれを「無限小」という概念によって説明しようとしましたが, 無限小の厳密な定式化は(当時において)得られませんでした. この定理の証明, そして積分という操作, それらの厳密化はいつごろ, どのように行われたのでしょうか？ 次の節では, それを見てみようと思います. 
+が成り立ちます．これで定理が証明されました．
+\par これでめでたしめでたし，と言いたいところですが，よく見るとこの証明には曖昧な部分がいくつかあることが分かります．特に「近づいていく」とはどういうことか，その概念が非常にフワフワしています．これは「関数の連続性」という概念に関わってきます．彼らはこれを「無限小」という概念によって説明しようとしましたが，無限小の厳密な定式化は(当時において)得られませんでした．この定理の証明，そして積分という操作，それらの厳密化はいつごろ，どのように行われたのでしょうか？次の節では，それを見てみようと思います．
 \Section{\S 2.厳密化の流れ - Riemann積分}
-\Subsection{極限, 連続性の定式化($\varepsilon$-$\delta$論法)}
-まず, 実数や極限, 関数の連続性といったものを厳密化しようとする流れが起こったのは18〜19世紀ごろのことです. この流れにより, 「限りなく近づく」といった表現, 関数の連続性という概念は次のように定式化されました. 
-\begin{itembox}[l]{定義(関数の極限, 関数の連続性)}
+\Subsection{極限，連続性の定式化($\varepsilon$-$\delta$論法)}
+まず，実数や極限，関数の連続性といったものを厳密化しようとする流れが起こったのは18〜19世紀ごろのことです．この流れにより，「限りなく近づく」といった表現，関数の連続性という概念は次のように定式化されました．
+\begin{itembox}[l]{定義(関数の極限，関数の連続性)}
 \begin{enumerate}
-\item 実数値関数$f(x)$について, 「$x$が$a$に近づくとき, $f(x)$が実数$\alpha$に限りなく近づく」とは, 「正数$\varepsilon$を1つ固定したとき, 『$\left| x-a \right|<\delta(<h)$を満たす, $f(x)$の定義域中の$x$をどう取っても, $\left| \alpha -f(x) \right| <\varepsilon$』が成り立つような正数$\delta$が存在する」ことである. このとき, $\alpha$を$f(x)$の$x=a$における極限といい, 
+\item 実数値関数$f(x)$について，「$x$が$a$に近づくとき，$f(x)$が実数$\alpha$に限りなく近づく」とは，「正数$\varepsilon$を1つ固定したとき，『$\left| x-a \right|<\delta(<h)$を満たす，$f(x)$の定義域中の$x$をどう取っても，$\left| \alpha -f(x) \right| <\varepsilon$』が成り立つような正数$\delta$が存在する」ことである．このとき，$\alpha$を$f(x)$の$x=a$における極限といい，
 \begin{eqnarray}
 \alpha=\lim_{x \to a}f(x) \nonumber
 \end{eqnarray}
-と表す. 
-\item 実数値関数$f(x)$の定義域の点$a$について, 
+と表す．
+\item 実数値関数$f(x)$の定義域の点$a$について，
 \begin{eqnarray}
 f(a)=\lim_{x \to a}f(x) \nonumber
 \end{eqnarray}
-が成り立つとき, $f(x)$は$x=a$において連続であるという. $f(x)$の定義域中の全ての点において$f(x)$が連続であるとき, 単に$f(x)$は単に連続であるという. 
+が成り立つとき，$f(x)$は$x=a$において連続であるという．$f(x)$の定義域中の全ての点において$f(x)$が連続であるとき，単に$f(x)$は単に連続であるという．
 \end{enumerate}
 \end{itembox}
-\par これがいわゆる「$\varepsilon$-$\delta$論法」というものです. この条件がどういう意味なのか説明します. 最初に固定する正数$\varepsilon$は, 極限値$\alpha$との誤差に相当します. この$\varepsilon$に対して, $x=a$との距離に相当する正数$\delta$を十分小さくとってやります.; これが「$a$に限りなく近づく」ということを意味します. そして, $a$との距離が$\delta$より小さいような, そんな定義域中の点$x$における$f(x)$の値と, $\alpha$の値との“誤差”が$\varepsilon$より小さくなる, ということを要請しているというわけです. 
+\par これがいわゆる「$\varepsilon$-$\delta$論法」というものです．「」内の条件がどういう意味なのか説明します．最初に固定する正数$\varepsilon$は，極限値$\alpha$との誤差に相当します．この$\varepsilon$に対して，$x=a$との距離に相当する正数$\delta$を十分小さくとってやります．これが「$a$に限りなく近づく」ということを意味します．そして，$a$との距離が$\delta$より小さいような，そんな定義域中の点$x$における$f(x)$の値と，$\alpha$の値との“誤差”が$\varepsilon$より小さくなる，ということを要請しているというわけです．
 \Subsection{Riemann積分の定義} 
-\par こうして, 関数の極限や連続性が厳密に定式化されました. この流れの中で, 積分の厳密化, 区分求積法の一般化として考案されたものが, Riemannによる積分の定式化, Riemann積分です. どのような定式化がなされたのか, それを見てみます. 以下, 閉区間$[a, b]$を定義域とする実数値関数$f(x)$を1つ固定します. $f(x)$の連続性は仮定していないことに注意してください. 
-\par まず, Riemann積分の概念に必要な準備をいくつか行います. 
+\par こうして，関数の極限や連続性が厳密に定式化されました．この流れの中で，積分の厳密化，区分求積法の一般化として考案されたものが，Riemannによる積分の定式化，Riemann積分です．どのような定式化がなされたのか，それを見てみます．以下，閉区間$[a, b]$を定義域とする実数値関数$f(x)$を1つ固定します．$f(x)$の連続性は仮定していないことに注意してください．
+\par まず，Riemann積分の概念に必要な準備をいくつか行います．
 \begin{itembox}[l]{定義(分割, 代表点)}
 \begin{enumerate}
-\item $a=t_0<t_1<\cdots<t_{n-1}<t_n=b$($n$は自然数)となる$n+1$個の実数の組$\Delta=t\{t_i\}_{i=0}^{n}$を, 閉区間$[a,b]$の分割という. この$\Delta $に対し, $t_i-t_{i-1}$($i=1,2,\ldots,n$)の最大値を$\Delta$の分割の幅といい, $\left|\Delta\right|$と表す. 
-\item $n$個の実数の組$\{\xi _i\}_{i=1}^{n}$が$\Delta=\{t_i\}_{i=0}^{n}$の代表点であるとは, 各$i=1,2,\ldots,n$に対して, $\xi _i \in [t_{i-1},t]$となっていることをいう. 
+\item $a=t_0<t_1<\cdots<t_{n-1}<t_n=b$($n$は自然数)となる$n+1$個の実数の組$\Delta=t\{t_i\}_{i=0}^{n}$を，閉区間$[a,b]$の分割という．この$\Delta $に対し，$t_i-t_{i-1}$($i=1,2,\ldots,n$)の最大値を$\Delta$の分割の幅といい，$\left|\Delta\right|$と表す．
+\item $n$個の実数の組$\{\xi _i\}_{i=1}^{n}$が$\Delta=\{t_i\}_{i=0}^{n}$の代表点であるとは，各$i=1,2,\ldots,n$に対して，$\xi _i \in [t_{i-1},t]$となっていることをいう．
 \end{enumerate}
 \end{itembox}
-これにより, $y=f(x)$のグラフ, $x$軸, 2直線$x=a,b$により“囲まれる”部分 の符号付き面積を, いくつかの長方形の面積により近似しようとする「Riemann和」の概念を定義します. 
+これにより，$y=f(x)$のグラフ，$x$軸，2直線$x=a,b$により“囲まれる”部分の符号付き面積を，いくつかの長方形の面積により近似しようとする「Riemann和」の概念を定義します．
 \begin{itembox}[l]{定義(Riemann和)}
-$f(x)$を上の通りとする. また, $\Delta=\{t_i\}_{i=0}^{n}$を$[a,b]$の分割, $\{\xi _i\}_{i=1}^{n}$を$\Delta$の代表点とする. この$f$, $\Delta$, $\{\xi _i\}_{i=1}^{n}$に対し, 
+$f(x)$を上の通りとする．また，$\Delta=\{t_i\}_{i=0}^{n}$を$[a,b]$の分割，$\{\xi _i\}_{i=1}^{n}$を$\Delta$の代表点とする．この$f$, $\Delta$, $\{\xi _i\}_{i=1}^{n}$に対し，
 \begin{eqnarray}
 S\left(f,\delta,\{\xi _i\}_{i=1}^{n}\right)=\sum_{i=1}^{n}f\left(\xi_{i} \right)(t_i - t_{i-1}) \nonumber
 \end{eqnarray}
-を, 分割$\Delta$, 代表点$\{\xi _i\}_{i=1}^{n}$における$f$のRiemann和という. 
+を，分割$\Delta$，代表点$\{\xi _i\}_{i=1}^{n}$における$f$のRiemann和という．
 \end{itembox}
-\par これは何をしているかというと, $i=1,2,\ldots,n$について, 閉区間$[t_{i-1},t_i]$における$f$の振る舞いを$f\left(\xi_i\right)$により近似し, 各長方形の面積$f\left(\xi_{i} \right)(t_i - t_{i-1})$の総和をとるということです. これは「有限個の長方形による近似」であるという点で区分求積法における近似と似ていますが, ところどころ違う点があります. 区分求積法が「区間を等分割」し, 「各区間の右端点など, 分割が決まれば自動的に決まる代表点」を用いるのに対し, Riemann和による近似は「区間の分割が任意」かつ, 「代表点の取り方も任意」です. この意味で, Riemann和は区分求積法による近似の一般化となっています. 
-\par さて, この近似は, 閉区間$[a,b]$の分割が「十分細かくなる」と精度が上がっていくことが期待されます. しかし, これは一般には成り立ちません. 先ほどの「連続関数」の概念と同様に, 「閉区間の分割が細かくなると近似の精度が上がるような関数」というものを, 次のように定式化します. 
-\begin{itembox}[l]{定義(Riemann可積分関数, 定積分)}
-閉区間$[a,b]$上で定義された実数値関数$f$がRiemann可積分とは, ある実数値$S$が存在して, 次のような性質が成り立つことをいう. \\
-「正数$\varepsilon$を1つ固定したとき, 『$[a,b]$の分割$\Delta$であって, その幅$\left|\Delta\right|<\delta$であるようなもの, および$\Delta$の代表点$\{\xi _i\}_{i=1}^{n}$をどのように取っても, Riemann和$S\left(f,\delta,\{\xi _i\}_{i=1}^{n}\right)$に対し, $\left|S-S\left(f,\delta,\{\xi _i\}_{i=1}^{n}\right)\right|<\varepsilon$』となるように正数$\delta$をとることができる」 \\
-また, このときの実数値$S$を, $f$の$[a,b]$における定積分といい, $\displaystyle \int_a^b f(x) dx$と表す. 
+\par これは何をしているかというと，$i=1,2,\ldots,n$について，閉区間$[t_{i-1},t_i]$における$f$の振る舞いを$f\left(\xi_i\right)$により近似し，各長方形の面積$f\left(\xi_{i} \right)(t_i - t_{i-1})$の総和をとるということです．これは「有限個の長方形による近似」であるという点で区分求積法における近似と似ていますが，ところどころ違う点があります．区分求積法が「区間を等分割」し，「各区間の右端点など，分割が決まれば自動的に決まる代表点」を用いるのに対し，Riemann和による近似は「区間の分割が任意」かつ，「代表点の取り方も任意」です．この意味で，Riemann和は区分求積法による近似の一般化となっています．
+\par さて，この近似は，閉区間$[a,b]$の分割が「十分細かくなる」と精度が上がっていくことが期待されます．しかし，これは一般には成り立ちません．先ほどの「連続関数」の概念と同様に，「閉区間の分割が細かくなると近似の精度が上がるような関数」というものを，次のように定式化します．
+\begin{itembox}[l]{定義(Riemann可積分関数，定積分)}
+閉区間$[a,b]$上で定義された実数値関数$f$がRiemann可積分とは，ある実数値$S$が存在して，次のような性質が成り立つことをいう． \\
+「正数$\varepsilon$を1つ固定したとき，『$[a,b]$の分割$\Delta$であって，その幅$\left|\Delta\right|<\delta$であるようなもの，および$\Delta$の代表点$\{\xi _i\}_{i=1}^{n}$をどのように取っても，Riemann和$S\left(f,\delta,\{\xi _i\}_{i=1}^{n}\right)$に対し，$\left|S-S\left(f,\delta,\{\xi _i\}_{i=1}^{n}\right)\right|<\varepsilon$』となるように正数$\delta$をとることができる．」 \\
+また，このときの実数値$S$を，$f$の$[a,b]$における定積分といい，$\displaystyle \int_a^b f(x) dx$と表す．
 \end{itembox}
-\par この定義はどういうことか説明します. まず近似の極限値$S$を与えます. 続いて, この$S$とRiemann和との間に許される誤差$\varepsilon$が与えられたとします. このとき, 正数$\delta$を小さくとることが「分割の幅を小さくする」, すなわち「分割を細かくする」ことに相当します. そして, このとき分割$\Delta$の幅$\left|\Delta\right|$が$\delta$未満ならば, $\Delta$の代表点$\{\xi _i\}_{i=1}^{n}$をどのように取っても, そのRiemann和$S\left(f,\delta,\{\xi _i\}_{i=1}^{n}\right)$と$S$との誤差が$\varepsilon$未満となるということを要請しているわけです. 関数の連続性のときと似ていますね. 
-\par そして, この性質を満たしているような関数, Riemann可積分関数のみ, その定積分の値を定めるということになります. では, Riemann可積分関数とはどのようなものでしょうか？逆に, Riemann可積分関数でないような関数とはどのようなものでしょうか？その例をいくつか考えてみましょう. 
-\par まず, Riemann可積分関数の例をみてみます. 
+\par この定義はどういうことか説明します．まず近似の極限値$S$を与えます．続いて，この$S$とRiemann和との間に許される誤差$\varepsilon$が与えられたとします．このとき，正数$\delta$を小さくとることが「分割の幅を小さくする」，すなわち「分割を細かくする」ことに相当します．そして，このとき分割$\Delta$の幅$\left|\Delta\right|$が$\delta$未満ならば，$\Delta$の代表点$\{\xi _i\}_{i=1}^{n}$をどのように取っても，そのRiemann和$S\left(f,\delta,\{\xi _i\}_{i=1}^{n}\right)$と$S$との誤差が$\varepsilon$未満となるということを要請しているわけです．関数の連続性のときと似ていますね．
+\par そして，この性質を満たしているような関数，Riemann可積分関数のみ，その定積分の値を定めるということになります．では，Riemann可積分関数とはどのようなものでしょうか？逆に，Riemann可積分関数でないような関数とはどのようなものでしょうか？その例をいくつか考えてみましょう．
+\par まず，Riemann可積分関数の例をみてみます. 
 \begin{itemize}
-\item 閉区間$[a,b]$上で連続な関数$f$は$[a,b]$上でRiemann積分可能です. 証明は実数の性質などの準備がさらに必要になるので省略しますが, これにより先ほどの議論が正当化されたことになります.  
-\item 閉区間$[a,b]$上で有界な関数$f$であって, そのうち連続でない点が有限個のみであるようなものはRiemann積分可能です. なお, ここで「有界な関数」とは, 「ある十分大きな正数$M$が存在して, $[a,b]$のどんな点$x$であっても$\left|f(x)\right|<M$となる」ことをいいます. 
+\item 閉区間$[a,b]$上で連続な関数$f$は$[a,b]$上でRiemann積分可能です．証明は実数の性質などの準備がさらに必要になるので省略しますが，これにより先ほどの議論が正当化されたことになります． 
+\item 閉区間$[a,b]$上で有界な関数$f$であって，そのうち連続でない点が有限個のみであるようなものはRiemann積分可能です．なお，ここで「有界な関数」とは，「ある十分大きな正数$M$が存在して，$[a,b]$のどんな点$x$であっても$\left|f(x)\right|<M$となる」ことをいいます．
 \end{itemize}
-\par 一方, Riemann可積分でない関数を見てみます. 
+\par 一方，Riemann可積分でない関数を見てみます．
 \begin{itemize}
-\item 閉区間[a,b]上で非有界な関数$f(x)$はRiemann可積分ではありません. なお, 非有界であるとは, 「どんな正数$M$に対しても, $\left|f(x)\right|>M$となる$x\in[a,b]$が存在する」ということです. この例としては, 例えば$[0,1]$上の関数$f$であって, $f(0)=0$, $x\in(0,1]$なる$x$に対し$f(x)=1/x$となるようなものが該当します. 
-\item 有界な関数であっても, 連続でない点全体の集合が「十分大きい」ような関数はRiemann可積分ではありません. 例えば, $[0,1]$上の関数であって, $[0,1]$内の有理数において1, 無理数において0となるような関数を考えると,これは $[0,1]$のどの点においても不連続です. なお, この関数は非常に病的な振る舞いであるので, 作者にちなんで 「Dirichletの関数」と呼ばれています. 
+\item 閉区間[a,b]上で非有界な関数$f(x)$はRiemann可積分ではありません．なお，非有界であるとは，「どんな正数$M$に対しても，$\left|f(x)\right|>M$となる$x\in[a,b]$が存在する」ということです．この例としては，例えば$[0,1]$上の関数$f$であって，$f(0)=0$, $x\in(0,1]$なる$x$に対し$f(x)=1/x$となるようなものが該当します．
+\item 有界な関数であっても，連続でない点全体の集合が「十分大きい」ような関数はRiemann可積分ではありません．例えば，$[0,1]$上の関数であって，$[0,1]$内の有理数において1，無理数において0となるような関数を考えると，これは$[0,1]$のどの点においても不連続です．なお，この関数のグラフは非常に病的な振る舞いをします．そこで，この関数は作者にちなんで「Dirichletの関数」と呼ばれています．
 \end{itemize}
-\par 上の例でも言及したとおり, 連続関数はRiemann積分可能です. また, 以上の準備を踏まえると, Leibnizらの「微分積分学の基本定理」の証明も厳密に正当化することができます. こうして, 区分求積法から始まった積分の厳密な一般化, 定式化が正当に行われました. 
+\par 上の例でも言及したとおり，連続関数はRiemann積分可能です．また，以上の準備を踏まえると，Leibnizらの「微分積分学の基本定理」の証明も厳密に正当化することができます．こうして，区分求積法から始まった積分の厳密な一般化，定式化が正当に行われました．
 \Subsection{Riemann積分のデメリット}
-このようにして, 積分というものが厳密なものとして再定義されました. 実際, この積分の定義で十分実用的な分野も存在します. ところが, 解析学の発展に伴い, この積分の定義では関数の扱い方に若干の不自由が生じることが分かりました. 
-\par それは, 例えば関数の列$\{f_n(x)\}_{n=1}^{\infty}$を考えた場合に起こります. この関数列として, 「閉区間$[0,1]$において定義されるRiemann可積分関数」の列を取ったとします. さらに, その極限関数, すなわち定義域上の各$x$に対して極限値$\displaystyle\lim _{n \to \infty}f_{n}(x)$が存在するとき, $f(x)=\displaystyle\lim _{n \to \infty}f_{n}(x)$として定まる関数$f$, が存在するとしましょう. では, この極限関数$f$はRiemann可積分関数でしょうか？ そう言い切りたい願望はありますが, 残念ながら答えはNoです. つまり, 各関数がRiemann可積分関数である列であっても, その極限関数は必ずしもRiemann可積分とは限りません. 極限関数がRiemann可積分となるような十分条件はいくつか見つかっていますが(例えば関数列が「よい収束(一様収束)」をするなど), それを調べるのは大変なものが多いことが分かっています. つまり, Riemann積分は極限操作に対してあまり良い振る舞いをしてくれないのです. 
-\par しかしながら, 極限操作は解析学においては基本的かつ重要な操作であり, それが容易に行えないというのは相当な不自由を強いられるようになります. これについて, 極限操作に関してよりよく振る舞うような関数の集合があるのではないだろうか？ その1つの答えとして, 積分の新たな定義を与えたのがLebesgueです. このLebesgueにより与えられた定義が, 現代の解析学でもっとも普遍的といっても過言ではない積分の定義, Lebesgue積分です. 以下では, Lebesgue積分がどのようなものなのか見ていきましょう. 
+このようにして，積分というものが厳密なものとして再定義されました．実際，この定義の積分で十分な実用性をもつ分野も存在します．ところが，解析学の発展に伴い，この積分の定義では関数の扱い方に若干の不自由が生じることが分かりました．
+\par それは，例えば関数の列$\{f_n(x)\}_{n=1}^{\infty}$を考えた場合に起こります．この関数列として，「閉区間$[0,1]$において定義されるRiemann可積分関数」の列を取ったとします．さらに，その極限関数，すなわち定義域上の各$x$に対して極限値$\displaystyle\lim _{n \to \infty}f_{n}(x)$が存在するとき，$f(x)=\displaystyle\lim _{n \to \infty}f_{n}(x)$として定まる関数$f$，が存在するとしましょう．では，この極限関数$f$はRiemann可積分関数でしょうか？そう言い切りたい願望はありますが，残念ながら答えはNoです．つまり，各関数がRiemann可積分関数である列であっても，その極限関数は必ずしもRiemann可積分とは限りません．極限関数がRiemann可積分となるような十分条件はいくつか見つかっていますが(例えば関数列が「よい収束(一様収束)」をするなど)，それを調べるのは大変なものが多いことが分かっています．つまり，Riemann積分は極限操作に対してあまり良い振る舞いをしてくれないのです．
+\par しかしながら，極限操作は解析学においては基本的かつ重要な操作であり，それが容易に行えないというのは相当な不自由を強いられるようになります．これについて，極限操作に関してよりよく振る舞うような関数の集合があるのではないだろうか？その1つの答えとして，20世紀初めに積分の新たな定義を与えたのがLebesgueです．このLebesgueにより与えられた定義が，現代の解析学でもっとも普遍的といっても過言ではない積分の定義，Lebesgue積分です．以下では，Lebesgue積分がどのようなものなのか見ていきましょう．
 \Section{\S 3.積分の一般化 - Lebesgue積分}
 \Subsection{“大きさ”の公理化・一般化(測度論)}
-Lebesgueが積分を再定義するために行った仕事としてまず挙げられるのが, 「測度」という概念の導入です. これは, ある集合の部分集合の“大きさ”というものがどのようなものか, その概念を一般化するものです. この“大きさ”というのは, 実数直線$\mathbb{R}$でいうところの“長さ”, $xy$平面$\mathbb{R}^2$でいうところの“面積”に相当します. 
-\par 似たような概念に, 集合上の2点間の「距離」とはどのようなものかということを一般化した「距離空間」というものがあります. これは次のようなものです. 
+Lebesgueが積分を再定義するために行った仕事としてまず挙げられるのが，「測度」という概念の導入です．これは，ある集合の部分集合の“大きさ”というものがどのようなものか，その概念を一般化するものです．この“大きさ”というのは，実数直線$\mathbb{R}$でいうところの“長さ”，$xy$平面$\mathbb{R}^2$でいうところの“面積”に相当します．
+\par 似たような概念に，集合上の2点間の「距離」とはどのようなものかということを一般化した「距離空間」というものがあります．これは次のようなものです．
 \begin{itembox}[l]{定義(距離, 距離空間)}
-$X$を集合とする. $X$の2点$x,y$に対して実数$d(x,y)$を返す関数$d$が, 任意の$x,y,z\in X$に対して
+$X$を集合とする．$X$の2点$x,y$に対して実数$d(x,y)$を返す関数$d$が，任意の$x,y,z\in X$に対して
 \begin{enumerate}
 \item $d(x,y) \ge 0$, $d(x,y)=0 \Leftrightarrow x=y$
 \item $d(x,y)=d(y,x)$
 \item (三角不等式) $d(x,z)=d(x,y)+d(y,z)$
 \end{enumerate}
-となるとき, $d$を$X$上の距離関数, あるいは単に距離であるという. また, このとき集合$X$と関数$d$の組$(X,d)$を距離空間という. 
+となるとき，$d$を$X$上の距離関数，あるいは単に距離であるという．また，このとき集合$X$と関数$d$の組$(X,d)$を距離空間という．
 \end{itembox}
-\par これはどういうことでしょうか. 端的に述べると, 「距離」とはどういう性質を持っているかを考えて, その性質を満たしているものは全部距離と言ってしまおう, ということです. 極端なものを出すと, 集合$X$の2点$x,y$に対して実数$d(x,y)$を返す関数$d$を
+\par これはどういうことでしょうか．端的に述べると，「距離」とはどういう性質を持っているかを考えて，その性質を満たしているものは全部距離と言ってしまおう，ということです．極端なものを出すと，集合$X$の2点$x,y$に対して実数$d(x,y)$を返す関数$d$を
 \begin{eqnarray}
 d(x,y)=\begin{cases}
 0 & (x=y) \nonumber \\
 1 & (x \neq y) \nonumber
 \end{cases}
 \end{eqnarray}
-により定めると, これは上の性質を全て満たしているので, $X$上の距離といえることになります. このように, 「満たしていてほしい性質」を規定することによる定義の仕方を「公理的に定義する」などと言います. 
-\par これと同様にして, “大きさ”という概念を, 測度として公理的に定義してみましょう. 以下, この節では$xy$平面$\mathbb{R}^2$における部分集合の面積を思い浮かべながらお読みいただければ分かりよいかと思います. 
-\par まず, 測度というものを考える前段階として, 集合$X$上の「有限加法的測度」というものを考えます. そのために, 「大きさがちゃんと測れるような$X$の部分集合」全体の集合$\mathcal{F}$と, 「そのような部分集合の面積」を与える関数$m$とはどのような性質を持っているか考えましょう. 
-\par まず$\mathcal{F}$について, 
+により定めると，これは上の性質を全て満たしているので，$X$上の距離といえることになります．このように，「満たしていてほしい性質」を規定することによる定義の仕方を「公理的に定義する」などと言い，現代数学においてよく用いられます．
+\par これと同様にして，“大きさ”という概念を，測度として公理的に定義してみましょう．以下, この節では$xy$平面$\mathbb{R}^2$における部分集合の面積を思い浮かべながらお読みいただければ分かりよいかと思います．
+\par まず，測度というものを考える前段階として，集合$X$上の「有限加法的測度」というものを考えます．そのために，「大きさがちゃんと測れるような$X$の部分集合」全体の集合$\mathcal{F}$と，「そのような部分集合の面積」を与える関数$m$とはどのような性質を持っているか考えましょう．
+\par まず$\mathcal{F}$について，
 \begin{itemize}
-\item 全体の集合$X$の大きさは測れてしかるべきでしょう. 
-\item $A$の大きさが測れるなら, $X$から$A$をくり抜いた残り, 補集合$A^c$の大きさも測れるはずです. 
-\item $A,B$の大きさが測れるなら, $A$と$B$を合わせたものも測れるはずでしょう. 
+\item 全体の集合$X$の大きさは測れてしかるべきでしょう．
+\item $A$の大きさが測れるなら，$X$から$A$をくり抜いた残り，補集合$A^c$の大きさも測れるはずです．
+\item $A,B$の大きさが測れるなら，$A$と$B$を合わせたものも測れるはずでしょう．
 \end{itemize}
-\par 次に, 実際の“大きさ”の測り方について, 
+\par 次に, 実際の“大きさ”の測り方について，
 \begin{itemize}
-\item “大きさ”は0以上の値でしょう. 平面$\mathbb{R}^2$の面積が$\infty$であることを考えると, “大きさ”は「0以上の実数か$\infty$」であることが望ましいと考えられます. 
-\item 空集合$\emptyset$は全体集合$X$の補集合だから“大きさ”が測れるはずですが, 空集合は「何もない」ことの象徴ですから, その“大きさ”は0であるでしょう. 
-\item $A,B$の“大きさ”がはかれて, かつ$A$と$B$に共通部分がないとき, $A$と$B$を合わせた集合の“大きさ”は$A$,$B$の“大きさ”の和であるはずです. 
+\item “大きさ”は0以上の値でしょう．平面$\mathbb{R}^2$の面積が$\infty$であることを考えると，“大きさ”は「0以上の実数か$\infty$」であることが望ましいと考えられます．
+\item 空集合$\emptyset$は全体集合$X$の補集合だから“大きさ”が測れるはずですが，空集合は「何もない」ことの象徴ですから，その“大きさ”は0であるでしょう．
+\item $A,B$の“大きさ”がはかれて，かつ$A$と$B$に共通部分がないとき，$A$と$B$を合わせた集合の“大きさ”は$A$,$B$の“大きさ”の和であるはずです．
 \end{itemize}
-\par 以上を元に, 次のような定義をします. 
-\begin{itembox}[l]{定義(有限加法族, 有限加法的測度)}
-$X$を集合とする. 
+\par 以上を元に，次のような定義をします．
+\begin{itembox}[l]{定義(有限加法族，有限加法的測度)}
+$X$を集合とする．
 \begin{enumerate}
-\item 各要素が$X$の部分集合であるような集合$\mathcal{F}$が$X$上の有限加法族であるとは, 次が成り立つことをいう：
+\item 各要素が$X$の部分集合であるような集合$\mathcal{F}$が$X$上の有限加法族であるとは，次が成り立つことをいう：
 \begin{description}
 \item{(1)} $X\in\mathcal{F}$
-\item{(2)} $A\in\mathcal{F}$ならば, $A^{c}\in\mathcal{F}$
-\item{(3)} $A,B\in\mathcal{F}$ならば, $A\cup B\in\mathcal{F}$
+\item{(2)} $A\in\mathcal{F}$ならば，$A^{c}\in\mathcal{F}$
+\item{(3)} $A,B\in\mathcal{F}$ならば，$A\cup B\in\mathcal{F}$
 \end{description}
-\item $X$上の有限加法族$\mathcal{F}$の要素$A$に対し, 0以上の実数または$\infty$である値$m(A)$を与える関数$m$が$\mathcal{F}$上の有限加法的測度であるとは, 次が成り立つことをいう：
+\item $X$上の有限加法族$\mathcal{F}$の要素$A$に対し，0以上の実数または$\infty$である値$m(A)$を対応させる関数$m$が$\mathcal{F}$上の有限加法的測度であるとは，次が成り立つことをいう：
 \begin{description}
 \item{(1)} $m\left(\emptyset\right)=0$
-\item{(2)} (有限加法性) $A,B\in\mathcal{F}, A\cap B=\emptyset$ならば, $m\left(A\cup B\right)=m(A)+m(B)$
+\item{(2)} (有限加法性) $A,B\in\mathcal{F}, A\cap B=\emptyset$ならば，$m\left(A\cup B\right)=m(A)+m(B)$
 \end{description}
 \end{enumerate}
 \end{itembox}
-\par これで“大きさ”というものが有限加法的測度として定式化されました. 長さや面積というものが実際にこれらの性質を満たしているだろうことは直感的にも理解できます. しかし, ここでLebesgueはこの概念の拡張という一大飛躍を敢行します. それが次に定める「測度」という概念になります. 
-\begin{itembox}[l]{定義(完全加法族, 測度)}
+\par これで“大きさ”というものが有限加法的測度として定式化されました．長さや面積というものが実際にこれらの性質を満たしているだろうことは直感的にも理解できます．しかし，ここでLebesgueはこの概念を極限操作に沿うように拡張する一大飛躍を敢行します．それが次に定める「測度」という概念になります．
+\begin{itembox}[l]{定義(完全加法族，測度)}
 $X$を集合とする. 
 \begin{enumerate}
-\item 各要素が$X$の部分集合であるような集合$\mathcal{M}$が$X$上の完全加法族であるとは, 次が成り立つことをいう：
+\item 各要素が$X$の部分集合であるような集合$\mathcal{M}$が$X$上の完全加法族であるとは，次が成り立つことをいう：
 \begin{description}
 \item{(1)} $X\in\mathcal{M}$
-\item{(2)} $A\in\mathcal{M}$ならば, $A^{c}\in\mathcal{M}$
-\item{(3)} $n=1,2,\ldots$に対して$A_{n}\in\mathcal{M}$ならば, $\bigcup_{n=1}^{\infty} A_{n}\in\mathcal{M}$
+\item{(2)} $A\in\mathcal{M}$ならば，$A^{c}\in\mathcal{M}$
+\item{(3)} $n=1,2,\ldots$に対して$A_{n}\in\mathcal{M}$ならば，$\bigcup_{n=1}^{\infty} A_{n}\in\mathcal{M}$
 \end{description}
-\item $X$上の完全加法族$\mathcal{M}$の要素$A$に対し, 0以上の実数または$\infty$である値$\mu(A)$を与える関数$\mu$が$\mathcal{M}$上の有限加法的測度であるとは, 次が成り立つことをいう：
+\item $X$上の完全加法族$\mathcal{M}$の要素$A$に対し，0以上の実数または$\infty$である値$\mu(A)$を対応させる関数$\mu$が$\mathcal{M}$上の測度であるとは，次が成り立つことをいう：
 \begin{description}
 \item{(1)} $\mu\left(\emptyset\right)=0$
-\item{(2)} (完全加法性)$n=1,2,\ldots$に対して$A_{n}\in\mathcal{M}$で, $n\neq m$となるとき$A_{n}\cap A_{m}=\emptyset$であるならば, 
+\item{(2)} (完全加法性)$n=1,2,\ldots$に対して$A_{n}\in\mathcal{M}$で，$n\neq m$となるとき$A_{n}\cap A_{m}=\emptyset$であるならば，
 \begin{eqnarray}
 \mu\left(\bigcup_{n=1}^{\infty}A_{n}\right)=\sum_{n=1}^{\infty}\mu\left(A_{n}\right) \left(=\lim_{m \to \infty}\sum_{n=1}^{m}\mu\left(A_n\right) \right) \nonumber
 \end{eqnarray}
 \end{description}
-またこのとき, 集合$X$, 完全加法族$\mathcal{M}$, 測度$\mu$の組$(X, \mathcal{M}, \mu)$を測度空間という. 
+またこのとき，集合$X$，完全加法族$\mathcal{M}$，測度$\mu$の組$(X, \mathcal{M}, \mu)$を測度空間という．
 \end{enumerate}
 \end{itembox}
-\par  なお, $\displaystyle\bigcup_{n=1}^{\infty}A_{n}$とは, 「ある自然数$n$に対し$x\in A_{n}$となっているような$x$全体の集合」のことです. つまり, 測度というものは, 
+\par  なお，$\displaystyle\bigcup_{n=1}^{\infty}A_{n}$とは，「ある自然数$n$に対し$x\in A_{n}$となっているような$x$全体の集合」，すなわち「$A_{n}$たちを全て合わせてできる集合」のことです．つまり，測度というものは，
 \begin{itemize}
-\item “大きさ”の測れる集合を可算無限個(自然数全体の集合$\mathbb{N}$と同じだけの“個数”)だけ持ってきたとき, それを全て合わせてできる集合の“大きさ”も測れて, 
-\item それぞれの部分集合同士に共通部分がないとき, 合わせてできた集合の“大きさ”は元の集合の“大きさ”を可算無限回足し合わせたものに等しい
+\item “大きさ”の測れる集合を可算無限個(自然数全体の集合$\mathbb{N}$と同じだけの“個数”)だけ持ってきたとき，それを全て合わせてできる集合の“大きさ”も測れて，
+\item それぞれの部分集合同士に共通部分がないとき，合わせてできた集合の“大きさ”は元の集合の“大きさ”を可算無限回足し合わせたものに等しい
 \end{itemize}
-ことを要請していることになります. ですから, 完全加法族ならびに測度の定義は, 最後の条件がそれぞれ有限加法族, 有限加法的測度の強化版になっていることが分かります. (あるいは, $n\ge3$において$A_{n}=\emptyset$とおいても分かります. ) このように「有限個」から「可算無限個」に拡張した部分が, 極限との親和性を上げる決定的な役割を果たします. 
-\par さて, 測度をこのように定義しましたが, 有限加法的測度よりも条件が強くなっているので, 実数直線$\mathbb{R}$における「標準的な長さ」や, $xy$平面$\mathbb{R}^2$における「標準的な面積」は測度になっているのか？という疑問が残ります. しかしそれは大丈夫で, (証明のためには更なる概念がいくつか必要なので省略しますが, ) 例えば実数直線$\mathbb{R}$において, すべての開区間や閉区間, 半開区間を元に持つ完全加法族$\mathcal{M}$と, 閉区間$[a,b]$に対し$\mu\left([a,b]\right)=b-a$となるような$\mathcal{M}$上の測度$\mu$は確かに存在します. そのような$\mu$はいくつもありますが, その中でLebesgueが作った測度のことを「1次元Lebesgue測度」といいます. これは$xy$平面$\mathbb{R}^2$, $xyz$空間$\mathbb{R}^3$などでも同様です. また, Lebesgue測度の定義域である完全加法族$\mathcal{M}$を「Lebesgue可測集合」といいます. 
-\par $\mathbb{R}$におけるLebesgue可測集合の例をいくつかみてみましょう. 先述のとおり, $\mathbb{R}$の開区間, 閉区間, 半開区間はすべてLebesgue可測集合です. 特に1点集合$\{a\}$は$[a,a]$とみなせて, Lebesgue可測集合です. また, Lebesgue可測集合の可算個の合併もLebesgue可測集合なので, $R$の可算部分集合(例えば自然数全体の集合$\mathbb{N}$, 整数全体の集合$\mathbb{Z}$, 有理数全体の集合$\mathbb{Q}$)はすべてLebesgue可測集合です. とくに有理数全体の集合$\mathbb{Q}$がLebesgue可測集合であるので, 無理数全体の集合$\mathbb{Q}^c$もLebesgue可測集合になります.  
+ことを要請していることになります．ですから，完全加法族ならびに測度の定義は，最後の条件がそれぞれ有限加法族，有限加法的測度の強化版になっていることが分かります．(あるいは，$n\ge3$において$A_{n}=\emptyset$とおいても分かります．) このように「有限個」から「可算無限個」に拡張した部分が，極限との親和性を上げる決定的な役割を果たします．
+\par さて，測度をこのように定義しましたが，有限加法的測度よりも条件が強くなっているので，実数直線$\mathbb{R}$における「標準的な長さ」や，$xy$平面$\mathbb{R}^2$における「標準的な面積」は測度になっているのか？という疑問が残ります．しかしそれは大丈夫で，(証明のためには更なる概念がいくつか必要なので割愛しますが，) 例えば実数直線$\mathbb{R}$において，すべての開区間や閉区間，半開区間を元に持つ完全加法族$\mathcal{M}$と，閉区間$[a,b]$に対し$\mu\left([a,b]\right)=b-a$となるような$\mathcal{M}$上の測度$\mu$は確かに存在します．そのような$\mu$はいくつもありますが，その中でLebesgueが作った測度のことを「1次元Lebesgue測度」といいます．これは$xy$平面$\mathbb{R}^2$，$xyz$空間$\mathbb{R}^3$などでも同様です．また，Lebesgue測度の定義域である完全加法族$\mathcal{M}$を「Lebesgue可測集合」といいます．
+\par $\mathbb{R}$におけるLebesgue可測集合の例をいくつかみてみましょう．先述のとおり，$\mathbb{R}$の開区間，閉区間，半開区間はすべてLebesgue可測集合です．特に1点集合$\{a\}$は$[a,a]$とみなせて，Lebesgue可測集合です．また，Lebesgue可測集合の可算個の合併もLebesgue可測集合なので，$R$の可算部分集合(例えば自然数全体の集合$\mathbb{N}$，整数全体の集合$\mathbb{Z}$，有理数全体の集合$\mathbb{Q}$)はすべてLebesgue可測集合です．とくに有理数全体の集合$\mathbb{Q}$がLebesgue可測集合であるので，無理数全体の集合，すなわち実数全体における有理数全体の補集合$\mathbb{Q}^c$もLebesgue可測集合になります． 
 \Subsection{Lebesgue積分の定義}
-ここまで測度論の話をしてきましたが, これがLebesgue積分にどのように関わってくるのでしょうか？ 実は, Lebesgue積分は, 測度空間$(X,\mathcal{M},\mu)$を定義域とし, 実数全体(あるいは実数全体に$\pm\infty$を加えた集合)を値にとりうる関数のうち, ある特殊な性質を満たす関数に対して定義される操作なのです. 
-\par では, 以上をもとに, いよいよLebesgue積分を定義します. 測度空間$(X,\mathcal{M},\mu)$, および$\mathcal{M}$の元$E$を1つ固定します.
-\par まずはLebesgue積分が定義できるような関数である「可測関数」から定義していきます. そのために, さらにもう1段階, 「単関数」という関数の定義をはさみます. 
+ここまで測度論の話をしてきましたが，これがLebesgue積分にどのように関わってくるのでしょうか？実は，Lebesgue積分は，測度空間$(X,\mathcal{M},\mu)$を定義域とし，実数全体(あるいは実数全体に$\pm\infty$を加えた集合)を値にとりうる関数のうち，ある特別な性質を満たす関数に対して定義される操作なのです．
+\par では, 以上をもとに, いよいよLebesgue積分を定義します．測度空間$(X,\mathcal{M},\mu)$, および$\mathcal{M}$の元$E$を1つ固定します．
+\par まずはLebesgue積分が定義できるような関数である「可測関数」から定義していきます．そのために，さらにもう1段階，「単関数」という関数の定義をはさみます．
 \begin{itembox}[l]{定義(単関数)}
-定義域$E$上の実数値関数$f$が$E$上の単関数であるとは, $f(x)$の値が0以上の実数$a_1, a_2, \ldots, a_n$のどれかであって, 各$i=1,2,\ldots,n$に対し, $X$の部分集合
+定義域$E$上の実数値関数$f$が$E$上の単関数であるとは，$f(x)$の値が0以上の実数$a_1, a_2, \ldots, a_n$のどれかであって，各$i=1,2,\ldots,n$に対し，$X$の部分集合
 \begin{eqnarray}
 E_i=f^{-1}\left(\{ a_i\}\right)=\left\{x\in E\mid f(x)=a_i \right\} \nonumber
 \end{eqnarray}
-が$\mathcal{M}$の元である($E_i\in\mathcal{M}$)ことをいう. 
+が$\mathcal{M}$の元である($E_i\in\mathcal{M}$)ことをいう．
 \end{itembox}
-\par 1次元Lebesgue測度空間としての$\mathbb{R}$上の単関数の簡単な例としては, 例えば$(0,1],(1,2],\ldots,(n-1,n]$上でそれぞれ0以上の実数$a_1,\ldots,a_n$を値に取り, それ以外では0となるような「階段のような」関数が挙げられます. 一見病的な例としては, $\mathcal{Q}$上で1, $\mathcal{Q}^c$上で0となる関数(Dirichletの関数)が挙げられます. 
-\par この上で, 可測関数を定義します. 
+\par 1次元Lebesgue測度空間としての$\mathbb{R}$上の単関数の簡単な例としては，例えば$(0,1],(1,2],\ldots,(n-1,n]$上でそれぞれ0以上の実数$a_1,\ldots,a_n$を値に取り，それ以外では0となるような「階段のような」関数が挙げられます．一見病的な例としては，$\mathcal{Q}$上で1，$\mathcal{Q}^c$上で0となる関数(先述したDirichletの関数)が挙げられます．
+\par この上で, 可測関数を定義します．
 \begin{itembox}[l]{定義(可測関数)}
 \begin{enumerate}
-\item $E$を定義域とし, 各点$x\in E$に対し$f(x)\ge 0$となるような実数値関数$f$が$E$上の正値可測関数であるとは, 次が成り立つことをいう：$E$上の単関数の単調増大列$\{f_n(x)\}_{n=1}^{\infty}$, すなわち各$f_n(x)$が単関数で, $x\in E, n\le m$ならば$f_{n}(x) \le f_{m}(x)$となるような列, であって, その列の極限関数が$f(x)$であるような列が存在する. 
-\item $E$を定義域とする実数値函数$f$が$E$上の可測関数であるとは, 次が成り立つことをいう：$f$の“正の部分”$f_{+}$, “負の部分”$f_{-}$を, 各$x\in E$に対し, 
+\item $E$を定義域とし，各点$x\in E$に対し$f(x)\ge 0$となるような実数値関数$f$が$E$上の正値可測関数であるとは，次が成り立つことをいう：$E$上の単関数の単調増大列$\{f_n(x)\}_{n=1}^{\infty}$，すなわち各$f_n(x)$が単関数で，$x\in E, n\le m$ならば$f_{n}(x) \le f_{m}(x)$となるような列，であって，その列の極限関数が$f(x)$であるような列が存在する．
+\item $E$を定義域とする実数値函数$f$が$E$上の可測関数であるとは，次が成り立つことをいう：$f$の“正の部分”$f_{+}$, “負の部分”$f_{-}$を，各$x\in E$に対し，
 \begin{eqnarray}
 f_{+}(x)=\max \left\{f(x),0\right\} , f_{-}(x)=\max \left\{-f(x),0\right\} \nonumber
 \end{eqnarray}
-として定めたとき, $f_{+}$, $f_{-}$が正値可測関数になっている. 
+として定めたとき，$f_{+}$, $f_{-}$が正値可測関数になっている．
 \end{enumerate}
 \end{itembox}
-\par なお, 上の$f_{+}, f_{-}$は後に出てくるLebesgue積分の定義でも用います. 
-\par 可測関数の例を挙げてみます. 例えば, 単関数はそのまま可測関数です. 上で定義した正値可測関数$f$について, $f_{+}(x)=f(x)$は当然正値可測関数, $f_{-}(x)\equiv 0$は単関数だから正値可測関数です. したがって, 正値可測関数もまた可測関数であることが分かります. また, 1次元Lebesgue測度空間の入った$\mathbb{R}$上の連続関数もまた可測関数であることが分かっています. 
-\par これで準備が整いました. $E$上の可測関数$f$に対し, そのLebesgue積分$\displaystyle \int_{E}fd\mu$を考えます. 簡単のため, まず正値可測関数におけるLebesgue積分から考えます. 
-\par 定義域$E$の正値可測関数$f$に対し, 極限関数を$f$とする単関数の単調増大列$\{f_{n}(x)\}_{n=1}^{\infty}$をとります. 各$f_{n}(x)$の取り得る値を$a_{n,1},a_{n,2},\ldots,a_{n,m_{n}}$とおき, さらに各$i=1,2,\ldots,m_{n}$に対し, $\displaystyle E_{n,i}=\left\{x\in E \mid f(x)=a_{n,i}\right\}$ と定めます. このときの値
+\par なお，上の$f_{+}，f_{-}$は後に出てくるLebesgue積分の定義でも用います．
+\par 可測関数の例を挙げてみます．例えば，単関数はそのまま可測関数です．上で定義した正値可測関数$f$について，$f_{+}(x)=f(x)$は当然正値可測関数，$f_{-}(x)\equiv 0$は単関数だから正値可測関数です．したがって，正値可測関数もまた可測関数であることが分かります．また，1次元Lebesgue測度空間の入った$\mathbb{R}$上の連続関数もまた可測関数であることが分かっています．
+\par これで準備が整いました．$E$上の可測関数$f$に対し，そのLebesgue積分$\displaystyle \int_{E}fd\mu$を考えます．簡単のため，まず正値可測関数におけるLebesgue積分から考えます．
+\par 定義域$E$の正値可測関数$f$に対し，極限関数を$f$とする単関数の単調増大列$\{f_{n}(x)\}_{n=1}^{\infty}$をとります．各$f_{n}(x)$の取り得る値を$a_{n,1},a_{n,2},\ldots,a_{n,m_{n}}$とおき，さらに各$i=1,2,\ldots,m_{n}$に対し，$\displaystyle E_{n,i}=\left\{x\in E \mid f(x)=a_{n,i}\right\}$ と定めます．このときの値
 \begin{eqnarray}
 \sum_{i=1}^{m_{n}}a_{i}\mu\left(E_{n,i}\right) \nonumber
 \end{eqnarray}
-は$n$について単調増加ですので, この値の$n \to \infty$における極限は実数値か$\infty$のどちらかです. この値の$n \to \infty$における極限値を$f$のLebesgue積分, すなわち
+は$n$について単調増加ですので，この値の$n \to \infty$における極限は実数値か$\infty$のどちらかです．この値の$n \to \infty$における極限値を$f$のLebesgue積分，すなわち
 \begin{eqnarray}
 \int_{E}fd\mu = \lim_{n \to \infty} \sum_{i=1}^{m_{n}}a_{i}\mu\left(E_{n,i}\right) \nonumber
 \end{eqnarray}
-と定めます. なお, この定め方には「単関数の単調増大列の取り方によるのではないか？」という疑問が残りますが, これは取り方によることなく, 全て同じ値になることが分かっています. 
-\par この操作は何をしているのでしょう？ 1次元Lebesgue測度空間$\mathbb{R}$を例に説明します. 単関数により$f(x)$を下から近似し, $f$により定まる部分集合の面積を下から近似します. 都合のいいことに, その値は$n$について単調増大であることが分かっているので, その$n \to \infty$における極限をとることで面積を求めようとしているということになります. 
-\par 以上を踏まえて, 一般の可測関数$f$のLebesgue積分を次のように定めます. 
+と定めます．なお, この定め方には「単関数の単調増大列の取り方によるのではないか？」という疑問が残りますが，これは取り方によることなく，全て同じ値になることが分かっています．
+\par この操作は何をしているのでしょう？1次元Lebesgue測度空間$\mathbb{R}$を例に説明します．単関数により$f(x)$を下から近似し，$f$により定まる部分集合の面積を下から近似します．都合のいいことに，その値は$n$について単調増大であることが分かっているので，その$n \to \infty$における極限をとることで面積を求めようとしているということになります．
+\par 以上を踏まえて，一般の可測関数$f$のLebesgue積分を次のように定めます．
 \begin{itembox}[l]{定義(Lebesgue積分, Lebesgue可積分関数)}
-定義域$E$の可測関数$f$について, 可測関数の定義同様に$f_{+}, f_{-}$を考える. 
+定義域$E$の可測関数$f$について，可測関数の定義同様に$f_{+}, f_{-}$を考える．
 \begin{enumerate}
-\item $\int_{E}f_{+}d\mu, \inf_{E}f_{-}d\mu$のうち, 少なくとも一方が実数であるとき, $f$は定積分をもつといい,
+\item $\int_{E}f_{+}d\mu, \inf_{E}f_{-}d\mu$のうち, 少なくとも一方が実数であるとき，$f$は定積分をもつといい，
 \begin{eqnarray}
 \int_{E}fd\mu=\int_{E}f_{+}d\mu - \int_{E}f_{-}d\mu \nonumber
 \end{eqnarray}
-を$f$の$E$における定積分という. これは実数値か$\pm \infty$のいずれかの値をとる. 
-\item さらに, $\displaystyle \int_{E}fd\mu$が実数値となるとき, $f$は$E$上のLebesgue可積分関数であるという. 
+を$f$の$E$における定積分という．これは実数値か$\pm \infty$のいずれかの値をとる．
+\item さらに，$\displaystyle \int_{E}fd\mu$が実数値となるとき，$f$は$E$上のLebesgue可積分関数であるという．
 \end{enumerate}
 \end{itembox}
-\par さて, このようにLebesgue積分を定義しましたが, これは既に定義されていたRiemann積分とどのような関係があるのでしょうか？実は, 1次元Lebesgue測度空間$\mathbb{R}$の閉区間$[a,b]$におけるRiemann可積分関数$f$は可測関数かつLebesgue可積分関数であって, さらにそのLebesgue積分はRiemann積分と一致することが示されます. この意味で, Lebesgue積分はRiemann積分の拡張といえるでしょう. 
+\par さて，このようにLebesgue積分を定義しましたが，これは既に定義されていたRiemann積分とどのような関係があるのでしょうか？実は，1次元Lebesgue測度空間$\mathbb{R}$の閉区間$[a,b]$におけるRiemann可積分関数$f$は可測関数かつLebesgue可積分関数であって，さらにそのLebesgue積分はRiemann積分と一致することが示されます．この意味で，Lebesgue積分はRiemann積分の拡張といえるでしょう．
 \Subsection{Lebesgue積分の恩恵}
-Lebesgue積分を定義しましたが, これがどのような利点を持っているのでしょう？ いくつかありますが, まず思いつくこととしては, 1次元Lebesgue測度空間$\mathbb{R}$におけるRiemann積分の真の拡張になっているということがあります. すなわち, Lebesgue可積分関数全体の集合はRiemann可積分関数全体の集合を真に包含していて, しかもRiemann可積分関数においては, そのRiemann積分とLebesgue積分が一致しているということです. Riemann可積分でなくLebesgue可積分であるような関数としては, 先述のDirichletの関数を挙げられます. 
-\par また, Lebesgue積分を導入するモチベーションの1つでもありましたが, 極限操作との親和性が高いことも利点として挙げられます. 例えば, Lebesgue積分の定義において用いた「可測関数」という概念について, 可測関数列$\{f_n(x)\}_{n=1}^{\infty}$の極限関数$f(x)=\displaystyle\lim _{n \to \infty}f_{n}(x)$が存在するとき, 極限関数$f(x)$もまた可測関数になることが分かります. また, Lebesgue可積分関数の列$\{f_n(x)\}_{n=1}^{\infty}$の極限関数$f(x)=\displaystyle\lim _{n \to \infty}f_{n}(x)$は残念ながら一般にはLebesgue可積分関数とは限りませんが, それがLebesgue可積分関数となる十分条件としては比較的簡単なものが見つかっています. 例えば, 次のような定理があります. 
+Lebesgue積分を定義しましたが，これがどのような利点を持っているのでしょう？いくつかありますが，まず思いつくこととしては，1次元Lebesgue測度空間$\mathbb{R}$におけるRiemann積分の真の拡張になっているということがあります．すなわち，Lebesgue可積分関数全体の集合はRiemann可積分関数全体の集合を真に包含していて，しかもRiemann可積分関数においては，そのRiemann積分とLebesgue積分が一致しているということです．Riemann可積分でなくLebesgue可積分であるような関数としては，先述のDirichletの関数を挙げられます．
+\par また，Lebesgue積分を導入するモチベーションの1つでもありましたが，極限操作との親和性が高いことも利点として挙げられます．例えば，Lebesgue積分の定義において用いた「可測関数」という概念について，可測関数列$\{f_n(x)\}_{n=1}^{\infty}$の極限関数$f(x)=\displaystyle\lim _{n \to \infty}f_{n}(x)$が存在するとき，極限関数$f(x)$もまた可測関数になることが分かります．また，Lebesgue可積分関数の列$\{f_n(x)\}_{n=1}^{\infty}$の極限関数$f(x)=\displaystyle\lim _{n \to \infty}f_{n}(x)$は残念ながら一般にはLebesgue可積分関数とは限りませんが，それがLebesgue可積分関数となる十分条件としては比較的簡単なものが見つかっています. 例えば，次のような定理があります． 
 \begin{itembox}[l]{定理(Lebesgueの優収束定理)}
-$\{f_n(x)\}_{n=1}^{\infty}$を, 測度空間$(X,\mathcal{M},\mu)$の可測集合$E\in \mathcal{M}$を定義域とする可測関数の列とする. すべての自然数$n$および点$x\in E$に対し, $\left| f_{n}(x)\right| \le \varphi(x)$となるようなLebesgue可積分関数$\varphi(x)$が存在すれば, 極限関数$f(x)$もLebesgue可積分関数で, さらにその定積分について, 
+$\{f_n(x)\}_{n=1}^{\infty}$を, 測度空間$(X,\mathcal{M},\mu)$の可測集合$E\in \mathcal{M}$を定義域とする可測関数の列とする．すべての自然数$n$および点$x\in E$に対し, $\left| f_{n}(x)\right| \le \varphi(x)$となるようなLebesgue可積分関数$\varphi(x)$が存在すれば, 極限関数$f(x)$もLebesgue可積分関数で, さらにその定積分について, 
 \begin{eqnarray}
 \int_{E}fd\mu=\lim_{n \to \infty} \int_{E}f_{n}d\mu \nonumber
 \end{eqnarray}
-が成り立つ. 
+が成り立つ．
 \end{itembox}
-\par さらに, Riemann積分はあくまで$\mathbb{R}$(あるいは一般化して$\mathbb{R}^n$)上の積分しか考えることができませんでしたが, Lebesgue積分は測度の定まった空間上の可測関数であれば何でも積分することができます. これは“大きさ”というものを測度として一般化した結果です. この応用例として顕著なものとしては, 確率論をあげることができます. これは, 「事象」というものを「見本空間」と呼ばれる集合の部分集合族であるような完全加法族の元, 「ある事象のおこる確率」というものを測度としてみなすことで見本空間を測度空間とします. その上でのLebesgue積分としては, 見本空間を定義域とする実数値可測関数(確率関数)の積分などがあります. 
-\par このようにして, 単なる「図形の面積」という概念から離れて, 積分というものがより様々な状況に対応できるように抽象化・一般化されていきました. 
+\par さらに，Riemann積分はあくまで$\mathbb{R}$(あるいは一般化して$\mathbb{R}^n$)上の積分しか考えることができませんでしたが，Lebesgue積分は測度の定まった空間上の可測関数であれば何でも積分することができます．これは“大きさ”というものを測度として一般化した結果です．この応用例として顕著なものとしては，確率論をあげることができます．これは，「見本空間」と呼ばれる集合において，「事象」を見本空間の部分集合を要素とする完全加法族の元，「ある事象のおこる確率」というものを測度としてみなすことで，見本空間を測度空間とします．その上でのLebesgue積分としては，見本空間を定義域とする実数値可測関数(確率関数)の積分などがあります．
+\par このようにして，単なる「図形の面積」という概念から離れて，積分というものがより様々な状況に対応できるように抽象化・一般化されていきました．
 \Section{\S 4.さいごに}
-現代数学までの「積分」という概念の変遷を見てきました. 数学の基本的な概念1つ取ってみても, その定式化には長い紆余曲折があったということがお分かりいただけたのではないでしょうか. 1つの概念をより厳密に考察し, さらに元来の目的以外でも用いることが出来るような一般化・抽象化を行っていく. そういった数学の奥深さといったものを感じていただければ幸いです. 
+現代数学までの「積分」という概念の変遷を見てきました．数学の基本的な概念1つ取ってみても，その定式化には長い紆余曲折があったということがお分かりいただけたのではないでしょうか．1つの概念をより厳密に考察し，さらに元来の目的以外でも用いることが出来るような一般化・抽象化を行っていく．そういった数学の奥深さといったものを感じていただければ幸いです．
 
