--- a/MAY2015/sp1.tex
+++ b/MAY2015/sp1.tex
@@ -2,8 +2,9 @@
 \Section{スリザーリンク}
 \footnote{「スリザーリンク」「カックロ」の名称は(株)ニコリの登録商標です。}
 \leavevmode \\
+\\
 \begin{figure}[H]
-\centering  % 図を真ん中に配置
+\centering
 \includegraphics[width =7cm,bb = 0 0 202 202]{sp1slitherlink1.png}
 \end{figure}
 \Subsection{スリザーリンクのルール}
@@ -15,9 +16,11 @@
 \newpage
 \Section{カックロ}
 \leavevmode \\
+\\
+
 \begin{figure}[H]
-\centering  % 図を真ん中に配置
-\includegraphics[width = 9cm,bb = 0 0 240 240]{sp1kakkuro1.png}
+\centering 
+\includegraphics[width = 7cm,bb = 0 0 240 240]{sp1kakkuro1.png}
 \end{figure}
 
 \Subsection{カックロのルール}
